1.4
Added Basic support for Beans from Tim Stephenson
CHanged MANIFEST.MF to adapt it to the last log4j
Solved bug 769389, now NativeExec works on XP
Adapted to jdk1.4.2 to solve finally nasty mess
Solved a few Deprecation messages
1.3
Added org.jcrontab.log.NullLog
Added ClassLoader.getResourceAsStream() from Sergey V. Udalstov
Added toArray methods to CrontabBean and CrontabEntryBean
Removed a few non used private variables Thanks to http://pmd.sourceforge.net
solved bug 624711 thanks to bago75
Solved a nasty bug with nativeExec in win
Adding Holidays Beans and Factories
Added Holidays logic to GenericSQL DAO
Solved a nasty bug with days 31
Added Bussines Days to org.jcrontab.Crontab
Added HolidaysDAOTest
1.2.3
Solved bug 600127 completley (sure!!) :-)
Solved bug 604019
Added setDaemon(boolean) to Crontab, to get bug 600127 completley solved
1.2
Re-Added a toString() method to CrontabEntryBean
Completed seconds & years integration
    DAO's
    CrontabEntry
    SQL
Added a new Test testCrontabParser
Added Horsman Patch to do jcrontab usuable with Weblogic reloads.
Added a control to avoid bug 600127, and to stop more "politely"
Removed initialitiation of booleans in the constructor moved to CrontabParser
1.1
added seconds & years to CrontabEntry
added CrontabParser as a separate parser and adpated everything to this change
Integration with Turbine (thanks to Eric Pughe)
added CalendarBuilder to get the next execution of a task
added SimpleTest as the first integration with junit :-)
added HOWTO-Turbine-Service to explain how to integrate jcrontab and Turbine
1.0RC
removed init(String, int) for init(String) to Crontab
added init(Properties) to Crontab
added loadDatabaseDriver(String) to GenericSQLSource
added getConnection to GenericSQLSource
added properties to loadCrontabServlet and the params overwrite the parameters
 from jcrontab.properties
 avoided NullPointerException at org.jcrontab.TaskTest2,org.jcrontab.TaskTest2, 
 org.jcrontab.CronTask